# nomad-onboarding-workshop

./: 404.html  index.html  mkdocs.yml  pyproject.toml
Creating_Workshop_Materials/: creating_workshop_materials.html  git_collaboration_training_materials.html
Misc/: Miscx_x_glossary.html
Module1/: M1_1_RDM_with_NOMAD.html  M1_2_NOMAD_and_oasis.html  M1_2_NOMAD_workflow.html  M1_3_NOMAD_datamodel.html  M1_4_NOMAD_users.html  M1_5_getting_support.html  M1_x_NOMAD_and_oasis.html  M1_x_NOMAD_datamodel.html  M1_x_NOMAD_users.html  M1_x_NOMAD_workflow.html  M1_x_getting_support.html  M1_x_glossary.html
Module2/: M2_x_NOMAD_GUI.html  M2_x_accessing_NOMAD.html  M2_x_create_account.html  M2_x_customized_search_dashboard.html  M2_x_explore_tab.html  M2_x_explore_use_cases.html  M2_x_inspecting_entry_pages.html  M2_x_upload_data.html
Module3/: 1_Overview.html
Module3/5_ELN_using_built-in_schema/: M3_1_0_ELN_overview.html  M3_1_0_ELN_overview_combined_concise.html  M3_1_1_planning_your_experiments.html  M3_1_2_documenting_your_experiments.html  M3_1_3_managing_your_experiments.html  M3_1_4_sharing_your_experiments.html  M3_2_0_getting_started.html  M3_2_0_getting_started_combined_concise.html  M3_2_1_creating_entries_built-in_schema.html  M3_2_2_creating_entities.html  M3_2_3_substance_entities.html  M3_2_4_sample_entites.html  M3_2_5_instrument_entities.html  M3_2_6_creating_activities.html  M3_2_7_materials_processing_activitiy.html  M3_2_8_measurement_activity.html  M3_3_0_managing_experiments.html  (+3 more)
Module4/: M4_0_overview.html
search/: search_index.json
(+25 files in other folders)
