[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "nomad-onboarding-workshop"
dynamic = ["version"]
description = "NOMAD Onboarding Workshop Materials."
readme = "README.md"
authors = [
    { name = "Siamak Nakhaie", email = 'siamak.nakhaie@physik.hu-berlin.de' },
    { name = "Ahmed Mansour", email = 'ahmed.mansour@physik.hu-berlin.de' }
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "nomad-lab>=1.2.1",
    "xmltodict==0.13.0",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "structlog==22.3.0",
]

[project.license]
file = "LICENSE"

[project.urls]
"Homepage" = "https://github.com/FAIRmat-NFDI/nomad-onboarding-workshop"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools_scm]
